# Secure_movie_TUI

./: .gitignore  app.py  pyproject.toml
movie/: domain.py  menu.py
tests/: test_app.py  test_domain.py  test_menu.py
