[tool.poetry]
name = "secure-movie-tui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
typeguard = "^4.1.5"
coverage = "^7.3.2"
dataclass-type-validator = "^0.1.2"
valid8 = "^5.1.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
